[package]
name = "spl-token-client"
version = "0.18.0"
description = "SPL-Token Rust Client"
documentation = "https://docs.rs/spl-token-client"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["display"]
dev-context-only-utils = [
    "dep:solana-banks-client",
    "dep:solana-banks-interface",
    "dep:solana-program-test",
]
display = ["dep:solana-cli-output"]

[dependencies]
async-trait = "0.1"
bincode = "1.3.2"
bytemuck = "1.24.0"
ethnum = { workspace = true }
futures = "0.3.31"
futures-util = "0.3"
solana-account = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-banks-client = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/sdk-deps-test", optional = true }
solana-banks-interface = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/sdk-deps-test", optional = true }
solana-compute-budget-interface = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-cli-output = { workspace = true, optional = true }
solana-hash = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-message = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-packet = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-program-pack = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-program-test = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/sdk-deps-test", optional = true }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-rpc-client = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/sdk-deps-test" }
solana-rpc-client-api = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/sdk-deps-test" }
solana-signature = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-signer = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
jupnet-signer = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-system-interface = { workspace = true }
solana-transaction = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
spl-associated-token-account-interface = { version = "2.0.0" }
spl-elgamal-registry = { version = "0.4.0", path = "../../confidential/elgamal-registry", features = ["no-entrypoint"] }
spl-memo-interface = { git = "https://github.com/jupnet/memo", branch = "fix/sdk-deps-test" }
spl-record = { version = "0.4.0", features = ["no-entrypoint"] }
spl-token-interface = { git = "https://github.com/jupnet/token", branch = "fix/token-tests" }
spl-token-confidential-transfer-proof-extraction = { path = "../../confidential/proof-extraction", version = "0.5.0" }
spl-token-confidential-transfer-proof-generation = { path = "../../confidential/proof-generation", version = "0.5.0" }
spl-token-2022-interface = { version = "2.0.0", path = "../../interface" }
spl-token-2022 = { version = "10.0.0", path = "../../program", features = ["no-entrypoint"] }
spl-token-group-interface = { git = "https://github.com/jupnet/token-group", branch = "fix/sdk-deps-test" }
spl-token-metadata-interface = { git = "https://github.com/jupnet/token-metadata", branch = "fix/sdk-deps-test" }
spl-transfer-hook-interface = { git = "https://github.com/jupnet/transfer-hook", branch = "fix/sdk-deps-test" }
tokio = "1"
thiserror = "^2.0"

[dev-dependencies]
async-trait = "0.1"
borsh = "1.5.7"
bytemuck = "1.24.0"
futures-util = "0.3"
solana-program-test = { git = "https://github.com/jupnet/jupnet-svm", branch = "fix/sdk-deps-test" }
solana-sdk = { workspace = true }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
spl-pod = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps-test" }
spl-instruction-padding-interface = "1.0.0"
spl-tlv-account-resolution = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps-test" }
spl-token-client = { path = ".", features = ["dev-context-only-utils"] }
test-case = "3.3"
