[package]
name = "spl-token-confidential-transfer-ciphertext-arithmetic"
version = "0.4.1"
description = "Solana Program Library Confidential Transfer Ciphertext Arithmetic"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = "0.22.1"
bytemuck = "1.24.0"
solana-curve25519= { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-zk-sdk = { git = "https://github.com/jupnet/zk-elgamal-proof", branch = "fix/sdk-deps-test" }

[dev-dependencies]
spl-token-confidential-transfer-proof-generation = { version = "0.5.0", path = "../proof-generation" }
curve25519-dalek = "4.1.3"
