[package]
name = "spl-elgamal-registry-interface"
version = "0.1.0"
description = "SPL ElGamal Registry Interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { version = "^1.24", features = ["derive"] }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test", features = ["curve25519"] }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk", branch = "fix/sdk-deps-test" }
solana-zk-sdk = { git = "https://github.com/jupnet/zk-elgamal-proof", branch = "fix/sdk-deps-test" }
spl-token-confidential-transfer-proof-extraction = { version = "0.5.0", path = "../proof-extraction" }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "regVYJW7tcT8zipN5YiBvHsvR5jXW1uLFxaHSbugABg"

[lints]
workspace = true
