[package]
name = "spl-elgamal-registry"
version = "0.4.0"
description = "SPL ElGamal Registry Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
solana-account-info = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-cpi = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-msg = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-entrypoint = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk", features = ["curve25519"] }
solana-rent = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk" }
solana-security-txt = "1.1.1"
solana-system-interface = { git = "https://github.com/jupnet/jupnet-sdk", features = ["bincode"] }
solana-sysvar = { git = "https://github.com/jupnet/jupnet-sdk", features = ["bincode"] }
solana-zk-sdk = { git = "https://github.com/jupnet/zk-elgamal-proof", branch = "jupnet" }
spl-elgamal-registry-interface = { version = "0.1.0", path = "../elgamal-registry-interface" }
spl-pod = { git = "https://github.com/jupnet/libraries", branch = "jupnet" }
spl-token-confidential-transfer-proof-extraction = { version = "0.5.0", path = "../proof-extraction" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "regVYJW7tcT8zipN5YiBvHsvR5jXW1uLFxaHSbugABg"

[lints]
workspace = true
