[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.5.1"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "^1.24"
solana-account-info = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-curve25519 = { git = "https://github.com/jupnet/jupnet-svm", branch = "v3.1.2" }
solana-instruction = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-instructions-sysvar = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-msg = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-program-error = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-pubkey = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-sdk-ids = { git = "https://github.com/jupnet/jupnet-sdk", branch = "main" }
solana-zk-sdk = { git = "https://github.com/jupnet/zk-elgamal-proof", branch = "jupnet" }
spl-pod = { git = "https://github.com/jupnet/libraries", branch = "fix/sdk-deps" }
thiserror = "^2.0"
