[package]
name = "spl-token-confidential-transfer-proof-generation"
version = "0.5.1"
description = "Solana Program Library Confidential Transfer Proof Generation"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
curve25519-dalek = "4.1.3"
solana-zk-sdk = { git = "https://github.com/jupnet/zk-elgamal-proof", branch = "jupnet" }
thiserror = "^2.0"

[lints]
workspace = true
